k8s/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rrhh-agent
  labels:
    name: rrhh-agent
    app: cognito-k3s-webhook
